##
## File:        Makefile.am 
## Package:     Babel makefiles
## Copyright:   (c) 2000-2001 Lawrence Livermore National Security, LLC
## Revision:    $Revision: 6348 $
## Modified:    $Date: 2008-03-28 08:11:57 -0700 (Fri, 28 Mar 2008) $
## Description: automake makefile to build the Babel documentation
##




SUBDIRS = html manuals

