##
## File:        Makefile.am
## Package:     Babel Examples
## Copyright:   (c) 2001, 2005 Lawrence Livermore National Security, LLC
## Revision:    $Revision$
## Modified:    $Date$
## Description: automake makefile for all babel examples
##

if SUPPORT_SHARED
SUBDIRS = hello cca 
else
SUBDIRS = hello
endif
